tests/js_error/source_locations/destructure/array/element_iterator_next.exp
Error: 
  ┌ tests/js_error/source_locations/destructure/array/element_iterator_next.js:8:17
  |
8 |           throw new Error();
  |                 ^
Stack trace:
  at next (tests/js_error/source_locations/destructure/array/element_iterator_next.js:8:17)
  at <global> (tests/js_error/source_locations/destructure/array/element_iterator_next.js:19:9)